--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/@angular/cdk/overlay-prebuilt.css",
+							"node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+							"node_modules/bootstrap/dist/css/bootstrap.min.css",
+							"src/styles.scss"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -92,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "df129769-69e8-4d40-9a2e-80758404b036"
   }
 }
