--- a/package.json
+++ b/package.json
@@ -21,17 +21,24 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.1.3",
+    "@angular/cdk": "^20.1.3",
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
+    "@angular/material": "^20.1.3",
     "@angular/platform-browser": "^20.1.0",
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.0",
+    "bootstrap": "^5.3.7",
     "express": "^5.1.0",
+    "ngx-mask": "^20.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "sweetalert2": "^11.22.2",
+    "tslib": "^2.3.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@angular/build": "^20.1.0",
@@ -40,6 +47,7 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "@types/zxcvbn": "^4.4.5",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
